Fix count bubble alignment in SearchListItem with latest @wordpress/components (https://github.com/woocommerce/woocommerce-admin/pull/5809)
* Remove showCount prop from SearchListControlItem

* Add option to show counts in ShowListControl story

* Fix count alignment in SearchListItem with latest Gutenberg

* Add new changelog entry

* Update dated prop description

--- a/plugins/woocommerce-admin/packages/components/src/search-list-control/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/search-list-control/style.scss
@@ -182,6 +182,12 @@
 			}
 		}
 
+		&.has-count {
+			> .components-menu-item__item {
+				width: 100%;
+			}
+		}
+
 		.woocommerce-search-list__item-count {
 			flex: 0 1 auto;
 			padding: $gap-smallest/2 $gap-smaller;
